--- a/gh-pages/index.html
+++ b/gh-pages/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>Taggest</title>
-    <link href="index_files/common.css" rel="stylesheet">
+    <link href="css/common.css" rel="stylesheet">
   </head>
   <body>
     <div class="navigation open">
@@ -74,6 +74,6 @@ yhteistyökumppaneiltamme.</p>
       </div>
     </div>
     <script src="index_files/jquery.js" type="text/javascript"></script>
-    <script src="index_files/index.js"></script>
+    <script src="js/index.js"></script>
   
-<script src="index_files/livereload.es"></script></body></html>
+</body></html>
