--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/common.css" rel="stylesheet">
   </head>
   <body>
-    <div class="navigation open">
+    <div class="navigation">
       <div class="search"></div>
       <div class="menu">
         <nav>
